Minor corrections in Makefile.in of procs library. Added u-test to Makefile.in of utils library. Added u-test facilities to utils library. Modified FIFO module of utils library: now it can be used with shared memory between heavy weight processes (enabling flag 'FIFO_PROCESS_SHARED'). Added u-test for FIFO module of utils library.

--- a/utils/Makefile.in
+++ b/utils/Makefile.in
@@ -2,10 +2,16 @@
 # Specify interpreter
 SHELL = /bin/sh
 
+# C++ compiler
+CPP = c++
+
 INCLUDE_DIR = $(PREFIX)/include
 LIB_DIR = $(PREFIX)/lib
+EXE_DIR=$(PREFIX)/bin
 LIBNAME = mediaprocsutils
 
+# Compiler options
+CFLAGS+=-Wall -O3
 CFLAGS+=-I$(INCLUDE_DIR)
 # 32 /64 bits architecture stuff ...
 LBITS := $(shell getconf LONG_BIT)
@@ -16,10 +22,16 @@ else
    # 32 bit stuff here
 endif
 
-LIBS=-lm -ldl -lpthread -L$(LIB_DIR) -luriparser
+LIBS= -lm -ldl -lpthread
+LIBS+= -L$(LIB_DIR) -luriparser
 
-_OBJ = $(wildcard $(SRCDIR)/*.c*)
-OBJ = $(patsubst $(SRCDIR)/%.c*,$(BUILDDIR)/%.o,$(_OBJ))
+_OBJ = $(wildcard $(SRCDIR)/*.c)
+OBJ = $(patsubst $(SRCDIR)/%.c,$(BUILDDIR)/%.o,$(_OBJ))
+
+LIBS_UTESTS= $(LIBS) -l$(LIBNAME) -lUnitTest++
+
+_OBJ_UTESTS_EXE = $(wildcard $(SRCDIR)/../utests/utests*.c*)
+OBJ_UTESTS_EXE = $(patsubst $(SRCDIR)/../utests/%.c*,$(BUILDDIR)/utests/%.o,$(_OBJ_UTESTS_EXE))
 
 .PHONY : $(SRCDIR) $(BUILDDIR)
 
@@ -31,13 +43,14 @@ config:
 	@mkdir -p $(INCLUDE_DIR)/lib$(LIBNAME)
 	@mkdir -p $(LIB_DIR)
 	@mkdir -p $(BUILDDIR)
+	@mkdir -p $(BUILDDIR)/utests
 
 build: config
 	@if [ ! -f $(LIB_DIR)/lib$(LIBNAME).so ] ; then \
 		$(MAKE) $(BUILDDIR)/lib$(LIBNAME).so; \
 	fi
 
-$(BUILDDIR)/%.o: $(SRCDIR)/%.c*
+$(BUILDDIR)/%.o: $(SRCDIR)/%.c
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 $(BUILDDIR)/lib$(LIBNAME).so: $(OBJ)
@@ -47,5 +60,17 @@ install:
 	cp $(BUILDDIR)/lib$(LIBNAME).so $(LIB_DIR)/lib$(LIBNAME).so;
 	cp -a $(SRCDIR)/*.h $(INCLUDE_DIR)/lib$(LIBNAME)/;
 
+utest:
+	$(MAKE) $(EXE_DIR)/$(LIBNAME)_utests
+	chmod +x $(EXE_DIR)/$(LIBNAME)_utests
+	chmod +x $(SRCDIR)/../utests/utests.sh
+	$(SRCDIR)/../utests/utests.sh $(PREFIX) $(LIBNAME)_utests yes
+
+$(BUILDDIR)/utests/%.o: $(SRCDIR)/../utests/%.c*
+	$(CPP) -c -o $@ $< $(CFLAGS)
+
+$(EXE_DIR)/$(LIBNAME)_utests: $(OBJ_UTESTS_EXE)
+	$(CPP) -o $@ $^ $(CFLAGS) $(LIBS_UTESTS)
+
 clean:
-	rm -rf $(LIB_DIR)/lib$(LIBNAME).so $(INCLUDE_DIR)/lib$(LIBNAME)
+	rm -rf $(LIB_DIR)/lib$(LIBNAME).so $(INCLUDE_DIR)/lib$(LIBNAME) $(EXE_DIR)/$(LIBNAME)_utests
