Modules for linked-list facilities, memory utilities, and status codes were updated. Added new modules to 'utils' library: buffer bit-parsing module and mpe2-CRC32 computing module.

--- a/utils/Makefile.in
+++ b/utils/Makefile.in
@@ -23,7 +23,7 @@ else
 endif
 
 LIBS= -lm -ldl -lpthread
-LIBS+= -L$(LIB_DIR) -luriparser
+LIBS+= -L$(LIB_DIR) -luriparser -lmediaprocscrc
 
 _OBJ = $(wildcard $(SRCDIR)/*.c)
 OBJ = $(patsubst $(SRCDIR)/%.c,$(BUILDDIR)/%.o,$(_OBJ))
