--- a/procs/Makefile.in
+++ b/procs/Makefile.in
@@ -28,7 +28,7 @@ LIBS+= -L$(LIB_DIR) -lmediaprocsutils -luriparser -lcjson
 _OBJ = $(wildcard $(SRCDIR)/*.c)
 OBJ = $(patsubst $(SRCDIR)/%.c,$(BUILDDIR)/%.o,$(_OBJ))
 
-LIBS_UTESTS= $(LIBS) -l$(LIBNAME) -lUnitTest++
+LIBS_UTESTS= $(LIBS) -l$(LIBNAME) -lUnitTest++ -lmediaprocscrc
 
 _OBJ_UTESTS_EXE = $(wildcard $(SRCDIR)/../utests/utests*.c*)
 OBJ_UTESTS_EXE = $(patsubst $(SRCDIR)/../utests/%.c*,$(BUILDDIR)/utests/%.o,$(_OBJ_UTESTS_EXE))
